fix: Corrige z-index

--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -4,3 +4,11 @@
     border-top: 1px solid rgba($color-primary, 0.1);
     margin-bottom: 1rem;
 }
+
+.layer {
+    @include z-index("space");
+}
+
+.low-opacity {
+    opacity: 0.8 !important;
+}
