--- a/src/app/components/snackbar/snackbar.component.scss
+++ b/src/app/components/snackbar/snackbar.component.scss
@@ -1,4 +1,7 @@
+@import "../../../scss/includes.scss";
+
 .snackbar {
+    @include z-index("space");
     min-width: 250px;
     margin-left: -125px;
     background-color: #313a46;
@@ -7,7 +10,6 @@
     border-radius: 3px;
     padding: 12px;
     position: fixed;
-    z-index: 99;
     left: 50%;
     bottom: 30px;
 }
