--- a/src/app/components/vehicle-card/vehicle-card.component.scss
+++ b/src/app/components/vehicle-card/vehicle-card.component.scss
@@ -22,7 +22,7 @@
     @include large-and-up() {
         &:hover {
             transform: scale(1.1);
-            z-index: 2;
+            @include z-index("sky");
         }
     }
 
